RESOLVED FIXED185827
Web Automation: terminate the automation session if the network or storage process crashes
https://bugs.webkit.org/show_bug.cgi?id=185827
Summary Web Automation: terminate the automation session if the network or storage pr...
Blaze Burg
Reported 2018-05-21 11:49:22 PDT
Things ain't going to work so well if this happens. It should be a hard session error.
Attachments
Patch (1.93 KB, patch)
2018-05-21 13:25 PDT, Blaze Burg
no flags
Radar WebKit Bug Importer
Comment 1 2018-05-21 11:49:35 PDT
Blaze Burg
Comment 2 2018-05-21 13:25:18 PDT
WebKit Commit Bot
Comment 3 2018-05-21 14:48:04 PDT
Comment on attachment 340877 [details] Patch Clearing flags on attachment: 340877 Committed r232028: <https://trac.webkit.org/changeset/232028>
WebKit Commit Bot
Comment 4 2018-05-21 14:48:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.