Web Automation: terminate the automation session if the network or storage process crashes https://bugs.webkit.org/show_bug.cgi?id=185827 <rdar://problem/40424020>

Reviewed by Tim Horton.

If one of the processes crashes, the page may be in an undefined state and
automation will fail in unpredictable ways. It's better to just give up immediately.

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::networkProcessFailedToLaunch):
(WebKit::WebProcessPool::storageProcessCrashed):


Canonical link: https://commits.webkit.org/201287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232028 268f45cc-cd09-0410-ab3c-d52691b4dbfc